	now using the compiled C versions of the dissimilarity code.

	* oldDistance: (was `distance()`) fixed a bug in the x-only case
	where `method = "kendall"`.

	* Vignette: Updated some details regarding C versions of
	dissimilarity coefs.

	* performance: a tweak to the print method to zap values that
	are effectively 0. Only affects vectors of performance statistics
	not data frames of stats.

Version 0.11-5

	* newDistance: (yet another) new distance() replacement to
	interface with fast C versions of the dissimilarity code. This
	one *will* replace `distance()` in version 0.12-0, where upon it
	will be renamed to `distance()` and the current `distance()` will
	be renamed to `oldDistance()`.

	* Unit tests: started adding unit tests using the **testthat**
	package. Hence **analogue** now `Suggests: testthat`.

Version 0.11-4

	* logitreg: fitting is now possible using Firth's bias reduction
	technique via the brglm package.

	Changes to the labels in the output of the `summary` method.

	* plot3d.prcurve: dynamic 3D plot of the data in PCA space with
	the fitted principal curve superimposed.

	* smoothGAM: new smooth function plugin for `prcurve`. Allows
	fitting principal curves via individual GAM models using
	`mgcv::gam` as the engine. The main advantage is that data sets
	with non-Gaussian errors can now be handled more appropriately,
	such as handling count data correctly.

	`smoothGAM` is much slower than `smoothSpline` currently, although
	there is potential for speeding this up via pre-computing some of
	the GAM terms. As an example, the Abernethy Forest example in
	`?prcurve` takes ~10 seconds on my 2-year old laptop.

	* prcurve: improvements to the printed output during fitting (i.e.
	with `trace = TRUE`) displays a progress bar during initial
	estimates of smooth complexities. Residual variance printed to
	fewer decimal places.

	Now returns components `ordination` and `data`, the PCA ordination